--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
           </div>
           <ul class="row list-item data-fade-in">
             <li class="item col-lg-3 col-md-6 col-12">
-              <div class="item-wrapper">
+              <a href="#" class="item-wrapper">
                 <div class="item-text">
                   State-of-the-art grand conference pavilion
                 </div>
@@ -678,10 +678,10 @@
                     alt=""
                   />
                 </div>
-              </div>
+              </a>
             </li>
             <li class="item col-lg-3 col-md-6 col-12">
-              <div class="item-wrapper">
+              <a href="#" class="item-wrapper">
                 <div class="item-text">Seawater swimming pool and gym</div>
                 <div class="item-image overflow-hidden">
                   <img
@@ -690,10 +690,10 @@
                     alt=""
                   />
                 </div>
-              </div>
+              </a>
             </li>
             <li class="item col-lg-3 col-md-6 col-12">
-              <div class="item-wrapper">
+              <a href="#" class="item-wrapper">
                 <div class="item-text">
                   Private beach enclave for curated sporting and leisure
                   pursuits
@@ -705,10 +705,10 @@
                     alt=""
                   />
                 </div>
-              </div>
+              </a>
             </li>
             <li class="item col-lg-3 col-md-6 col-12">
-              <div class="item-wrapper">
+              <a href="#" class="item-wrapper">
                 <div class="item-text">
                   Gourmet tropical restaurant and exclusive lounge bar
                 </div>
@@ -719,7 +719,7 @@
                     alt=""
                   />
                 </div>
-              </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -735,92 +735,124 @@
           <div class="swiper swiper-discover data-fade-in">
             <ul class="list-item swiper-wrapper">
               <li class="item swiper-slide">
-                <div class="item-wrapper">
+                <a href="#" class="item-wrapper">
                   <div class="item-image overflow-hidden">
                     <img
                       src="./assets/images/banner.png"
                       class="data-zoom-in"
+                      data-swiper-parallax-x="10%"
                       alt=""
                     />
                   </div>
                   <div class="item-text">
                     Flexible stay options perfectly matching your travel plans
                   </div>
-                </div>
+                </a>
               </li>
               <li class="item swiper-slide">
-                <div class="item-wrapper">
+                <a href="#" class="item-wrapper">
                   <div class="item-image overflow-hidden">
                     <img
                       src="./assets/images/banner.png"
                       class="data-zoom-in"
+                      data-swiper-parallax-x="10%"
                       alt=""
                     />
                   </div>
                   <div class="item-text">
                     Flexible stay options perfectly matching your travel plans
                   </div>
-                </div>
+                </a>
               </li>
               <li class="item swiper-slide">
-                <div class="item-wrapper">
+                <a href="#" class="item-wrapper">
                   <div class="item-image">
-                    <img src="./assets/images/banner.png" alt="" />
+                    <img
+                      src="./assets/images/banner.png"
+                      class="data-zoom-in"
+                      data-swiper-parallax-x="10%"
+                      alt=""
+                    />
                   </div>
                   <div class="item-text">
                     Flexible stay options perfectly matching your travel plans
                   </div>
-                </div>
+                </a>
               </li>
               <li class="item swiper-slide">
-                <div class="item-wrapper">
+                <a href="#" class="item-wrapper">
                   <div class="item-image">
-                    <img src="./assets/images/banner.png" alt="" />
+                    <img
+                      src="./assets/images/banner.png"
+                      class="data-zoom-in"
+                      data-swiper-parallax-x="10%"
+                      alt=""
+                    />
                   </div>
                   <div class="item-text">
                     Flexible stay options perfectly matching your travel plans
                   </div>
-                </div>
+                </a>
               </li>
               <li class="item swiper-slide">
-                <div class="item-wrapper">
+                <a href="#" class="item-wrapper">
                   <div class="item-image">
-                    <img src="./assets/images/banner.png" alt="" />
+                    <img
+                      src="./assets/images/banner.png"
+                      class="data-zoom-in"
+                      data-swiper-parallax-x="10%"
+                      alt=""
+                    />
                   </div>
                   <div class="item-text">
                     Flexible stay options perfectly matching your travel plans
                   </div>
-                </div>
+                </a>
               </li>
               <li class="item swiper-slide">
-                <div class="item-wrapper">
+                <a href="#" class="item-wrapper">
                   <div class="item-image">
-                    <img src="./assets/images/banner.png" alt="" />
+                    <img
+                      src="./assets/images/banner.png"
+                      class="data-zoom-in"
+                      data-swiper-parallax-x="10%"
+                      alt=""
+                    />
                   </div>
                   <div class="item-text">
                     Flexible stay options perfectly matching your travel plans
                   </div>
-                </div>
+                </a>
               </li>
               <li class="item swiper-slide">
-                <div class="item-wrapper">
+                <a href="#" class="item-wrapper">
                   <div class="item-image">
-                    <img src="./assets/images/banner.png" alt="" />
+                    <img
+                      src="./assets/images/banner.png"
+                      class="data-zoom-in"
+                      data-swiper-parallax-x="10%"
+                      alt=""
+                    />
                   </div>
                   <div class="item-text">
                     Flexible stay options perfectly matching your travel plans
                   </div>
-                </div>
+                </a>
               </li>
               <li class="item swiper-slide">
-                <div class="item-wrapper">
+                <a href="#" class="item-wrapper">
                   <div class="item-image">
-                    <img src="./assets/images/banner.png" alt="" />
+                    <img
+                      src="./assets/images/banner.png"
+                      class="data-zoom-in"
+                      data-swiper-parallax-x="10%"
+                      alt=""
+                    />
                   </div>
                   <div class="item-text">
                     Flexible stay options perfectly matching your travel plans
                   </div>
-                </div>
+                </a>
               </li>
             </ul>
             <div class="discover-arrow">
