--- a/index.html
+++ b/index.html
@@ -1286,10 +1286,10 @@
               </div>
             </li>
           </ul>
+          <a href="#" class="btn-general btn-book">BOOK NOW</a>
         </div>
       </section>
       <div class="spacing-120"></div>
-      <div class="spacing-80"></div>
     </main>
     <div class="cta-mess">
       <a href="#" class="messenger">
