add page room detail

--- a/accommdation-detail.html
+++ b/accommdation-detail.html
@@ -192,7 +192,9 @@
           <div class="row g-0">
             <div class="col-lg-6 offset-lg-3">
               <div class="detail-description-box">
-                <h2 class="h2-font color-secondary font-heading font-light">
+                <h2
+                  class="h2-font color-secondary font-heading font-light data-fade-in"
+                >
                   Presidential Suites
                 </h2>
                 <ul class="list-item data-fade-in">
@@ -290,7 +292,7 @@
                   it's yoga at sunrise.
                 </div>
                 <div
-                  class="detail-sm b1-font font-body color-secondary b1-font font-light"
+                  class="detail-sm b1-font font-body color-secondary b1-font font-light data-fade-in"
                 >
                   It offers breathtaking ocean views, personalized butler
                   service, and world-class amenities tailored to your every
@@ -299,10 +301,152 @@
                   luxurious haven. From sunset cocktails on your private terrace
                   to exquisite fine dining under the stars.
                 </div>
-                <div class="list-button">
+                <div class="list-button data-fade-in">
                   <a href="" class="btn-general">Book now</a>
-                  <a href="" class="btn-general outline">See more</a>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="two-col-content">
+        <div class="col-content">
+          <h3 class="h3-font font-heading font-light color-secondary">
+            Amenities
+          </h3>
+          <ul>
+            <li>
+              <p class="b1-font color-secondary font-light">
+                Dining: The island offers a variety of dining experiences,
+                including meals prepared by private chefs, a floating sushi bar,
+                and beach barbecues.
+              </p>
+            </li>
+            <li>
+              <p class="b1-font color-secondary font-light">
+                Water Sports: Guests can enjoy high-end water sports,
+                paddleboarding, kayaking, and fishing.
+              </p>
+            </li>
+            <li>
+              <p class="b1-font color-secondary font-light">
+                Spa: The island features a spa with a range of wellness
+                treatments and therapies.
+              </p>
+            </li>
+            <li>
+              <p class="b1-font color-secondary font-light">
+                Activities: Hiking trails, treasure hunts, and activities for
+                children, such as feeding lemurs.
+              </p>
+            </li>
+            <li>
+              <p class="b1-font color-secondary font-light">
+                Sustainability: Necker Island is committed to sustainable
+                development, renewable energy sources, and protecting endangered
+                species.
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div class="col-content">
+          <h3 class="h3-font font-heading font-light color-secondary">
+            Amenities
+          </h3>
+          <ul>
+            <li>
+              <p class="b1-font color-secondary font-light">
+                Dining: The island offers a variety of dining experiences,
+                including meals prepared by private chefs, a floating sushi bar,
+                and beach barbecues.
+              </p>
+            </li>
+            <li>
+              <p class="b1-font color-secondary font-light">
+                Water Sports: Guests can enjoy high-end water sports,
+                paddleboarding, kayaking, and fishing.
+              </p>
+            </li>
+            <li>
+              <p class="b1-font color-secondary font-light">
+                Spa: The island features a spa with a range of wellness
+                treatments and therapies.
+              </p>
+            </li>
+            <li>
+              <p class="b1-font color-secondary font-light">
+                Activities: Hiking trails, treasure hunts, and activities for
+                children, such as feeding lemurs.
+              </p>
+            </li>
+            <li>
+              <p class="b1-font color-secondary font-light">
+                Sustainability: Necker Island is committed to sustainable
+                development, renewable energy sources, and protecting endangered
+                species.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="slider-parallax">
+        <div class="container-fluid p-0 h-100">
+          <div class="slider-parallax-container h-100">
+            <div class="swiper swiper-parallax-img">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="slider-parallax-img">
+                    <img src="./assets/images/img2.png" alt="" />
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider-parallax-img">
+                    <img src="./assets/images/img1.png" alt="" />
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="slider-parallax-img">
+                    <img src="./assets/images/img1.png" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="slider-parallax-arrow">
+              <div class="swiper-button-next swiper-button">
+                <svg
+                  width="11"
+                  height="18"
+                  viewBox="0 0 11 18"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M0.499999 0.999998C1.54998 3.79998 5.11997 9.39995 11 9.39995"
+                    stroke="#fff"
+                  />
+                  <path
+                    d="M0.500087 17.7984C1.55007 14.9984 5.12006 9.39844 11 9.39844"
+                    stroke="#fff"
+                  />
+                </svg>
+              </div>
+              <div class="swiper-button-prev swiper-button">
+                <svg
+                  width="11"
+                  height="18"
+                  viewBox="0 0 11 18"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M0.499999 0.999998C1.54998 3.79998 5.11997 9.39995 11 9.39995"
+                    stroke="#fff"
+                  />
+                  <path
+                    d="M0.500087 17.7984C1.55007 14.9984 5.12006 9.39844 11 9.39844"
+                    stroke="#fff"
+                  />
+                </svg>
               </div>
             </div>
           </div>
