--- a/index.html
+++ b/index.html
@@ -145,8 +145,13 @@
               </div>
             </div>
             <div class="col-lang">
-              <div class="header-language dropdown-custom d-none">
+              <div class="header-language dropdown-custom">
                 <div class="language__head dropdown-custom__btn">
+                  <div
+                    class="value-select color-white dropdown-custom__text b2-font text-uppercase"
+                  >
+                    <span>En</span>
+                  </div>
                   <div class="ic">
                     <svg
                       width="13"
@@ -165,18 +170,13 @@
                       />
                     </svg>
                   </div>
-                  <div
-                    class="value-select color-white dropdown-custom__text b2-font text-uppercase"
-                  >
-                    <span>En</span>
-                  </div>
                 </div>
                 <div class="language__body dropdown-custom__menu">
                   <a
                     href="#"
                     class="dropdown-custom__item language__item b2-font text-uppercase"
                   >
-                    <span>VI</span>
+                    <span class="b2-font text-uppercase">VI</span>
                   </a>
                 </div>
               </div>
