--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       </div>
     </header>
     <main>
-      <section class="hero position-relative text-white">
+      <section class="hero has-slider position-relative text-white">
         <div
           class="swiper hero-slider position-absolute top-0 start-0 w-100 h-100"
           data-loop="true"
