--- a/offer.html
+++ b/offer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dining</title>
+    <title>Offer</title>
     <!-- import favicon -->
     <link rel="icon" type="image/x-icon" />
     <!-- meta -->
@@ -88,14 +88,14 @@
                   <li>
                     <a
                       href="./restaurant.html"
-                      class="b2-font color-white text-uppercase link-hover active"
+                      class="b2-font color-white text-uppercase link-hover"
                       >Dining</a
                     >
                   </li>
                   <li>
                     <a
                       href="./offer.html"
-                      class="b2-font color-white text-uppercase link-hover"
+                      class="b2-font color-white text-uppercase link-hover active"
                       >Offers</a
                     >
                   </li>
@@ -145,13 +145,8 @@
               </div>
             </div>
             <div class="col-lang">
-              <div class="header-language dropdown-custom">
+              <div class="header-language dropdown-custom d-none">
                 <div class="language__head dropdown-custom__btn">
-                  <div
-                    class="value-select color-white dropdown-custom__text b2-font text-uppercase"
-                  >
-                    <span>En</span>
-                  </div>
                   <div class="ic">
                     <svg
                       width="13"
@@ -170,13 +165,18 @@
                       />
                     </svg>
                   </div>
+                  <div
+                    class="value-select color-white dropdown-custom__text b2-font text-uppercase"
+                  >
+                    <span>En</span>
+                  </div>
                 </div>
                 <div class="language__body dropdown-custom__menu">
                   <a
                     href="#"
                     class="dropdown-custom__item language__item b2-font text-uppercase"
                   >
-                    <span class="b2-font text-uppercase">VI</span>
+                    <span>VI</span>
                   </a>
                 </div>
               </div>
@@ -188,7 +188,7 @@
     <main>
       <section class="hero position-relative text-white">
         <div class="hero-image">
-          <img src="./assets/images/banner-dining.png" alt="" />
+          <img src="./assets/images/banner-offer.png" alt="" />
         </div>
       </section>
 
@@ -209,13 +209,13 @@
         </div>
       </section>
       <div class="spacing-120"></div>
-      <section class="section-intro data-fade-in">
-        <div class="container-fluid intro-wrapper img-right">
-          <div class="row g-0 flex-row-reverse">
+      <section class="section-intro">
+        <div class="container-fluid intro-wrapper">
+          <div class="row g-0">
             <div class="col-lg-7 intro-image">
               <h4 class="data-fade-in">
-                Our restaurant offers a refined dining experience with a menu
-                crafted
+                Elevated experiences for prestigious events & high level
+                corporate meeting
               </h4>
               <div class="img-wrapper parallax-trigger overflow-hidden">
                 <img src="./assets/images/banner.png" alt="" />
@@ -223,23 +223,20 @@
             </div>
             <div class="col-lg-5 intro-content">
               <div class="box">
-                <h3 class="title data-fade-in">Restaurant</h3>
+                <h3 class="title data-fade-in">Staycation Bliss</h3>
                 <div class="desc data-fade-in">
                   <p>
-                    Established in July 2016, invites guests on a delicious
-                    adventure through Vietnamese cuisine. Fresh, local
-                    ingredients are expertly transformed into flavorful dishes
-                    by skilled chefs. Diners can savor these culinary creations
-                    in a tranquil garden
+                    Dive into a revitalizing weekend retreat in the heart of the
+                    city with our “Staycation Bliss”. Perfectly situated in a
+                    bustling shopping mall and within the CBD, this package
+                    melds the thrill of city life with the joy of a leisurely
+                    escape.
                   </p>
-                </div>
-                <div class="working-hours color-secondary b1-font data-fade-in">
-                  Operation hours: 6 AM - 10 PM
                 </div>
                 <div
                   class="button-wrapper d-flex align-items-center justify-content-between data-fade-in"
                 >
-                  <a href="#" class="btn-general text-uppercase">BOOK TABLE</a>
+                  <a href="#" class="btn-general text-uppercase">BOOK NOW</a>
                   <a href="#" class="b1-font link-hover color-secondary"
                     >See more</a
                   >
@@ -251,12 +248,12 @@
       </section>
       <div class="spacing-80 spacing-mb-24"></div>
       <section class="section-intro data-fade-in">
-        <div class="container-fluid intro-wrapper">
-          <div class="row g-0">
+        <div class="container-fluid intro-wrapper img-right">
+          <div class="row g-0 flex-row-reverse">
             <div class="col-lg-7 intro-image">
               <h4 class="data-fade-in">
-                Our beach bar is the perfect spot to unwind with tropical
-                cocktails, light bites
+                Elevated experiences for prestigious events & high level
+                corporate meeting
               </h4>
               <div class="img-wrapper parallax-trigger overflow-hidden">
                 <img src="./assets/images/banner.png" alt="" />
@@ -264,23 +261,19 @@
             </div>
             <div class="col-lg-5 intro-content">
               <div class="box">
-                <h3 class="title data-fade-in">Beach Bar</h3>
+                <h3 class="title data-fade-in">Flash Sale Offer</h3>
                 <div class="desc data-fade-in">
                   <p>
-                    The classy yet relaxed bar brings guests an intimate
-                    ambiance enriched by the mellow music which fills the air.
-                    We serve a diverse list of hand-crafted cocktails,
-                    sophisticated drinks, healthy detox juices and tropical
-                    fruit smoothies. Enjoy a cocktail made with fruit.
+                    Embark on a rejuvenating retreat to a peaceful green oasis,
+                    where you can escape the hustle and bustle of city life and
+                    soothe your soul amidst beautiful nature. Nestled among lush
+                    greenery and the vast ocean, 
                   </p>
-                </div>
-                <div class="working-hours color-secondary b1-font data-fade-in">
-                  Operation hours: 9 AM – 6 PM
                 </div>
                 <div
                   class="button-wrapper d-flex align-items-center justify-content-between data-fade-in"
                 >
-                  <a href="#" class="btn-general text-uppercase">BOOK TABLE</a>
+                  <a href="#" class="btn-general text-uppercase">BOOK NOW</a>
                   <a href="#" class="b1-font link-hover color-secondary"
                     >See more</a
                   >
