--- a/accommodation.html
+++ b/accommodation.html
@@ -317,7 +317,7 @@
                   </p>
                 </div>
                 <div
-                  class="button-wrapper d-flex align-items-center justify-content-between"
+                  class="button-wrapper d-flex align-items-center justify-content-between data-fade-in"
                 >
                   <a href="#" class="btn-general text-uppercase">BOOK NOW</a>
                   <a href="#" class="b1-font link-hover color-secondary"
@@ -441,7 +441,7 @@
                   </p>
                 </div>
                 <div
-                  class="button-wrapper d-flex align-items-center justify-content-between"
+                  class="button-wrapper d-flex align-items-center justify-content-between data-fade-in"
                 >
                   <a href="#" class="btn-general text-uppercase">BOOK NOW</a>
                   <a href="#" class="b1-font link-hover color-secondary"
