add page restaunrant detail

--- a/accommdation-detail.html
+++ b/accommdation-detail.html
@@ -186,7 +186,11 @@
       </div>
     </header>
     <main>
-      <div class="spacing"></div>
+      <section class="hero position-relative text-white">
+        <div class="hero-image">
+          <img src="./assets/images/img-room-detail.png" alt="" />
+        </div>
+      </section>
       <section class="detail-description">
         <div class="container-fluid p-0">
           <div class="row g-0">
@@ -311,10 +315,12 @@
       </section>
       <section class="two-col-content">
         <div class="col-content">
-          <h3 class="h3-font font-heading font-light color-secondary">
+          <h3
+            class="h3-font font-heading font-light color-secondary data-fade-in"
+          >
             Amenities
           </h3>
-          <ul>
+          <ul class="data-fade-in">
             <li>
               <p class="b1-font color-secondary font-light">
                 Dining: The island offers a variety of dining experiences,
@@ -350,10 +356,12 @@
           </ul>
         </div>
         <div class="col-content">
-          <h3 class="h3-font font-heading font-light color-secondary">
+          <h3
+            class="h3-font font-heading font-light color-secondary data-fade-in"
+          >
             Amenities
           </h3>
-          <ul>
+          <ul class="data-fade-in">
             <li>
               <p class="b1-font color-secondary font-light">
                 Dining: The island offers a variety of dining experiences,
@@ -452,6 +460,144 @@
           </div>
         </div>
       </section>
+      <div class="spacing-120"></div>
+      <section class="section-desc">
+        <div class="container-fluid p-0">
+          <div class="row g-0 justify-content-center">
+            <div class="col-lg-8">
+              <div class="desc data-fade-in">
+                Each of our other rooms offers a unique blend of comfort,
+                elegance, and stunning views, ensuring a serene retreat.
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="spacing-120"></div>
+      <section class="section-intro data-fade-in">
+        <div class="container-fluid intro-wrapper img-right">
+          <div class="row g-0 flex-row-reverse">
+            <div class="col-lg-7 intro-image">
+              <h4 class="data-fade-in">
+                Elevated experiences for prestigious events & high level
+                corporate meeting
+              </h4>
+              <div class="img-wrapper parallax-trigger overflow-hidden">
+                <img src="./assets/images/banner.png" alt="" />
+              </div>
+            </div>
+            <div class="col-lg-5 intro-content">
+              <div class="box">
+                <h3 class="title data-fade-in">Presidential Château</h3>
+                <ul class="list-item data-fade-in">
+                  <li>
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M15.75 4.5H19.5V8.25"
+                        stroke="#543929"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M14.25 9.75L19.5 4.5"
+                        stroke="#543929"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M8.25 19.5H4.5V15.75"
+                        stroke="#543929"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M9.75 14.25L4.5 19.5"
+                        stroke="#543929"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M19.5 15.75V19.5H15.75"
+                        stroke="#543929"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M14.25 14.25L19.5 19.5"
+                        stroke="#543929"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M4.5 8.25V4.5H8.25"
+                        stroke="#543929"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M9.75 9.75L4.5 4.5"
+                        stroke="#543929"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                    25 guests
+                  </li>
+                  <li>
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M12 14C14.7614 14 17 11.7614 17 9C17 6.23858 14.7614 4 12 4C9.23858 4 7 6.23858 7 9C7 11.7614 9.23858 14 12 14Z"
+                        stroke="#543929"
+                        stroke-miterlimit="10"
+                      />
+                      <path
+                        d="M3 19C4.01493 17.4555 5.36255 16.1948 6.92901 15.3246C8.49547 14.4543 10.2348 14 12 14C13.7652 14 15.5045 14.4543 17.071 15.3246C18.6375 16.1948 19.9851 17.4555 21 19"
+                        stroke="#543929"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                    25 Staffs
+                  </li>
+                </ul>
+                <div class="desc data-fade-in">
+                  <p>
+                    Enjoy absolute freedom, complete control over your space and
+                    time on the island with activities for relaxation of body
+                    and mind. Experience a luxurious stay with panoramic views
+                    of the coastal natural landscape over Van Phong Bay.
+                  </p>
+                  <p>
+                    “Affirming your personal mark and pride in every moment on
+                    the island”
+                  </p>
+                </div>
+                <div
+                  class="button-wrapper d-flex align-items-center justify-content-between"
+                >
+                  <a href="#" class="btn-general text-uppercase">BOOK NOW</a>
+                  <a href="#" class="b1-font link-hover color-secondary"
+                    >See more</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="spacing-120"></div>
     </main>
     <div class="cta-mess">
       <a href="#" class="messenger">
