--- a/facilities.html
+++ b/facilities.html
@@ -213,7 +213,7 @@
         <div class="container-fluid facilities_wrapper">
           <ul class="row list-item data-fade-in mt-0">
             <li class="item col-lg-3 col-md-6 col-12">
-              <a href="#" class="item-wrapper">
+              <div class="item-wrapper">
                 <div class="item-text">
                   State-of-the-art grand conference pavilion
                 </div>
@@ -224,10 +224,15 @@
                     alt=""
                   />
                 </div>
-              </a>
+              </div>
+              <a
+                href="#"
+                class="link-hover b1-font color-secondary underline-first"
+                >See more</a
+              >
             </li>
             <li class="item col-lg-3 col-md-6 col-12">
-              <a href="#" class="item-wrapper">
+              <div class="item-wrapper">
                 <div class="item-text">Seawater swimming pool and gym</div>
                 <div class="item-image overflow-hidden">
                   <img
@@ -236,10 +241,15 @@
                     alt=""
                   />
                 </div>
-              </a>
+              </div>
+              <a
+                href="#"
+                class="link-hover b1-font color-secondary underline-first"
+                >See more</a
+              >
             </li>
             <li class="item col-lg-3 col-md-6 col-12">
-              <a href="#" class="item-wrapper">
+              <div class="item-wrapper">
                 <div class="item-text">
                   Private beach enclave for curated sporting and leisure
                   pursuits
@@ -251,10 +261,15 @@
                     alt=""
                   />
                 </div>
-              </a>
+              </div>
+              <a
+                href="#"
+                class="link-hover b1-font color-secondary underline-first"
+                >See more</a
+              >
             </li>
             <li class="item col-lg-3 col-md-6 col-12">
-              <a href="#" class="item-wrapper">
+              <div class="item-wrapper">
                 <div class="item-text">
                   Gourmet tropical restaurant and exclusive lounge bar
                 </div>
@@ -265,12 +280,17 @@
                     alt=""
                   />
                 </div>
-              </a>
+              </div>
+              <a
+                href="#"
+                class="link-hover b1-font color-secondary underline-first"
+                >See more</a
+              >
             </li>
           </ul>
         </div>
       </section>
-      <div class="spacing-120"></div>
+      <div class="spacing-140"></div>
     </main>
     <div class="cta-mess">
       <a href="#" class="messenger">
