--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
           </div>
           <ul class="row list-item data-fade-in">
             <li class="item col-lg-3 col-md-6 col-12">
-              <a href="#" class="item-wrapper">
+              <div class="item-wrapper">
                 <div class="item-text">
                   State-of-the-art grand conference pavilion
                 </div>
@@ -678,10 +678,15 @@
                     alt=""
                   />
                 </div>
-              </a>
+              </div>
+              <a
+                href="#"
+                class="link-hover b1-font color-secondary underline-first data-fade-in"
+                >See more</a
+              >
             </li>
             <li class="item col-lg-3 col-md-6 col-12">
-              <a href="#" class="item-wrapper">
+              <div class="item-wrapper">
                 <div class="item-text">Seawater swimming pool and gym</div>
                 <div class="item-image overflow-hidden">
                   <img
@@ -690,10 +695,15 @@
                     alt=""
                   />
                 </div>
-              </a>
+              </div>
+              <a
+                href="#"
+                class="link-hover b1-font color-secondary underline-first data-fade-in"
+                >See more</a
+              >
             </li>
             <li class="item col-lg-3 col-md-6 col-12">
-              <a href="#" class="item-wrapper">
+              <div class="item-wrapper">
                 <div class="item-text">
                   Private beach enclave for curated sporting and leisure
                   pursuits
@@ -705,10 +715,15 @@
                     alt=""
                   />
                 </div>
-              </a>
+              </div>
+              <a
+                href="#"
+                class="link-hover b1-font color-secondary underline-first data-fade-in"
+                >See more</a
+              >
             </li>
             <li class="item col-lg-3 col-md-6 col-12">
-              <a href="#" class="item-wrapper">
+              <div class="item-wrapper">
                 <div class="item-text">
                   Gourmet tropical restaurant and exclusive lounge bar
                 </div>
@@ -719,7 +734,12 @@
                     alt=""
                   />
                 </div>
-              </a>
+              </div>
+              <a
+                href="#"
+                class="link-hover b1-font color-secondary underline-first data-fade-in"
+                >See more</a
+              >
             </li>
           </ul>
         </div>
@@ -896,7 +916,6 @@
           </div>
         </div>
       </section>
-      <div class="spacing-80"></div>
       <section class="section-logo">
         <div class="container-fluid logo-wrapper">
           <div class="row justify-content-center">
