--- a/offer.html
+++ b/offer.html
@@ -237,7 +237,9 @@
                   class="button-wrapper d-flex align-items-center justify-content-between data-fade-in"
                 >
                   <a href="#" class="btn-general text-uppercase">BOOK NOW</a>
-                  <a href="#" class="b1-font link-hover color-secondary"
+                  <a
+                    href="#"
+                    class="b1-font link-hover color-secondary underline-first"
                     >See more</a
                   >
                 </div>
@@ -274,7 +276,9 @@
                   class="button-wrapper d-flex align-items-center justify-content-between data-fade-in"
                 >
                   <a href="#" class="btn-general text-uppercase">BOOK NOW</a>
-                  <a href="#" class="b1-font link-hover color-secondary"
+                  <a
+                    href="#"
+                    class="b1-font link-hover color-secondary underline-first"
                     >See more</a
                   >
                 </div>
