--- a/services.html
+++ b/services.html
@@ -242,7 +242,9 @@
                   <a href="#" class="btn-general text-uppercase"
                     >BOOK SERVICE</a
                   >
-                  <a href="#" class="b1-font link-hover color-secondary"
+                  <a
+                    href="#"
+                    class="b1-font link-hover color-secondary underline-first"
                     >See more</a
                   >
                 </div>
@@ -284,7 +286,9 @@
                   <a href="#" class="btn-general text-uppercase"
                     >BOOK SERVICE</a
                   >
-                  <a href="#" class="b1-font link-hover color-secondary"
+                  <a
+                    href="#"
+                    class="b1-font link-hover color-secondary underline-first"
                     >See more</a
                   >
                 </div>
