--- a/dining.html
+++ b/dining.html
@@ -240,7 +240,9 @@
                   class="button-wrapper d-flex align-items-center justify-content-between data-fade-in"
                 >
                   <a href="#" class="btn-general text-uppercase">BOOK TABLE</a>
-                  <a href="#" class="b1-font link-hover color-secondary"
+                  <a
+                    href="#"
+                    class="b1-font link-hover color-secondary underline-first"
                     >See more</a
                   >
                 </div>
@@ -281,7 +283,9 @@
                   class="button-wrapper d-flex align-items-center justify-content-between data-fade-in"
                 >
                   <a href="#" class="btn-general text-uppercase">BOOK TABLE</a>
-                  <a href="#" class="b1-font link-hover color-secondary"
+                  <a
+                    href="#"
+                    class="b1-font link-hover color-secondary underline-first"
                     >See more</a
                   >
                 </div>
